<resources>
    <string name="app_name">DreamHome</string>
    <string name="vendors">Vendors</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_vendor">Create Vendor</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="contact_number">Contact Number</string>
    <string name="website">Website</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">Logo</string>
    <string name="banner">Banner</string>
    <string name="shop_name">Shop Name</string>
    <string name="modify_details">Modify Details</string>
    <string name="manage">Manage</string>
    <string name="add_to_cart">Add Cart</string>
    <string name="product_name">Product Name</string>
    <string name="active">Active</string>
    <string name="manage_vendor">Manage Vendor</string>
    <string name="suspend">Suspend</string>
    <string name="deactivate">Deactivate</string>
    <string name="reason_for_suspend">Reason for suspend</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="your_products">Your Products</string>
    <string name="no_products">No Products</string>
    <string name="create_product">Create Product</string>
    <string name="click_to_add_image">Tap to add image</string>
    <string name="description">Description</string>
    <string name="long_description">Long Description</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="unit">Unit</string>
    <string name="maximum_quantity_order">Maximum Quantity/Order</string>
    <string name="stock">Stock</string>
    <string name="manage_product">Manage Product</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_product">Edit Product</string>
    <string name="full_name">Full Name</string>
    <string name="join_us">Join Us</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_cost">Total Cost</string>
    <string name="place_your_order">Place your order</string>
    <string name="landmark">Landmark</string>
    <string name="place_order">Place Order</string>
    <string name="details">Details</string>
    <string name="your_orders">Your Orders</string>
    <string name="home">Home</string>
    <string name="cart">Wishlist</string>
    <string name="orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_items">No Items</string>
    <string name="wishlist">Wishlist</string>
    <string name="logout">LogOut</string>
    <string name="manage_order">Manage Order</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
</resources>