<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/join" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/large_dp"
                android:background="@drawable/circle"
                android:elevation="@dimen/common_dp"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/click_to_add_image"
                android:textColor="@color/hintColor" />

            <EditText
                android:id="@+id/fullName"
                style="@style/EditText"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/email"
                style="@style/EditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/password"
                style="@style/EditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/confirmPass"
                style="@style/EditText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/hintColor" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/join"
                android:layout_width="150dp"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x_large_dp"
                android:layout_marginBottom="@dimen/large_dp"
                android:background="@drawable/button_back"
                android:backgroundTint="#FA9771"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/join_us"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>
</layout>