<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".PurchaseActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/large_dp"
            app:cardElevation="@dimen/common_dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/field_back" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_dp"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginEnd="@dimen/large_dp"
                    android:layout_toEndOf="@id/image"
                    android:fontFamily="@font/roboto_bold"
                    android:singleLine="true"
                    android:text="@string/product_name"
                    android:textColor="@color/dark" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_marginStart="@dimen/large_dp"
                    android:layout_marginTop="@dimen/common_dp"
                    android:layout_marginEnd="@dimen/large_dp"
                    android:layout_toEndOf="@id/image"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:text="@string/product_name"
                    android:textColor="@color/hintColor" />

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginEnd="@dimen/large_dp"
                    android:layout_toEndOf="@id/price"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:text="@string/unit"
                    android:textColor="@color/hintColor" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:layout_margin="@dimen/large_dp"
                    android:layout_toEndOf="@id/image"
                    android:fontFamily="@font/roboto_bold"
                    android:singleLine="true"
                    android:text="66"
                    android:textColor="#008738" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/x_large_dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/place_your_order"
                    android:textAllCaps="true"
                    android:textColor="@color/dark"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/fullName"
                    style="@style/EditText"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:textColorHint="@color/hintColor" />

                <EditText
                    android:id="@+id/address"
                    style="@style/EditText"
                    android:gravity="start"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:textColorHint="@color/hintColor" />

                <EditText
                    android:id="@+id/pincode"
                    style="@style/EditText"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:textColorHint="@color/hintColor" />

                <EditText
                    android:id="@+id/landmark"
                    style="@style/EditText"
                    android:hint="@string/landmark"
                    android:inputType="textPostalAddress"
                    android:textColorHint="@color/hintColor" />

                <EditText
                    android:id="@+id/number"
                    style="@style/EditText"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    android:textColorHint="@color/hintColor" />

                <EditText
                    android:id="@+id/email"
                    style="@style/EditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/hintColor" />

                <Button
                    android:id="@+id/buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x_large_dp"
                    android:backgroundTint="@color/accentColor"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/place_order" />
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</layout>